--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
   </properties>
 
   <dependencies>
+      <!-- 文件上传的夹包 ，用于文件上传-->
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.3.1</version>
+      </dependency>
+      <!-- 用于生成图片的缩略图 -->
+      <dependency>
+          <groupId>net.coobird</groupId>
+          <artifactId>thumbnailator</artifactId>
+          <version>0.4.8</version>
+      </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
