--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,7 @@
         <servlet-name>springmvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>/Loing.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
