--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
 
   <dependencies>
       <!-- 文件上传的夹包 ，用于文件上传-->
-      <dependency>
-          <groupId>commons-fileupload</groupId>
-          <artifactId>commons-fileupload</artifactId>
-          <version>1.3.1</version>
-      </dependency>
+      <!--      <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>1.3.1</version>
+            </dependency>-->
       <!-- 用于生成图片的缩略图 -->
       <dependency>
           <groupId>net.coobird</groupId>
@@ -246,7 +246,10 @@
 
 
   </dependencies>
-
+    <!--
+    如果打包后没有mapper尝试一下方法
+    https://blog.csdn.net/oMrLeft123/article/details/70239951?utm_source=blogxgwz0
+    -->
   <build>
     <finalName>photo</finalName>
       <plugins>
@@ -262,6 +265,19 @@
               </configuration>
           </plugin>
       </plugins>
+      <!-- 要在plugins下，否则有异常 -->
+      <resources>
+          <resource>
+              <directory>src/main/java</directory>
+              <includes>
+                  <include>**/*.xml</include>
+              </includes>
+              <filtering>true</filtering>
+          </resource>
+          <!--<resource>-->
+          <!--<directory>src/main/resources</directory>-->
+          <!--</resource>-->
+      </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
