1.上传数量验证，手机端上传 不能同时多选，所以每次上传的时候要判断 2.图片显示，未完成

--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,9 @@
           </plugin>
       </plugins>
       <!-- 要在plugins下，否则有异常 -->
+      <!-- 将java下的xml文件一起打包到运行目录的class目录中
+            例如：mapper的xml
+       -->
       <resources>
           <resource>
               <directory>src/main/java</directory>
